<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileInteracao</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="matricula">Matrícula</string>
    <string name="salvar">Salvar</string>
    <string name="title_activity_detalhe_mensagem">DetalheMensagemActivity</string>
    <string name="ContextoDados_onCreate" />
    <string name="ContextoDados_onUpgrade" />
    <string name="sair">Sair</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="rem_coordenador">Coordenador do Curso</string>
    <string name="rem_direcao_unidade">Direção de Unidade</string>
    <string name="rem_biblioteca">Biblioteca</string>
    <string name="rem_pro_reitoria">Pro-Reitoria</string>
    <string name="rem_docente">Docente da Disciplina</string>
    <string name="title_activity_lista">ListaActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="nao_lida">Marcar como não lida</string>
    <string name="nome_aplicativo">Academy News UFG</string>
    <string name="ordernar_data_asc">Ordernar por Data Ascendente</string>
    <string name="ordenar_data_desc">Ordenar por Data Descendente</string>
    <string name="localizar_data_remetente">Localizar por Data e Remetente</string>
    <string name="cancelar">Cancelar</string>
    <string name="data_inicial">Data Inicial</string>
    <string name="remetente">Remetente</string>
    <string name="nao_lidas">Apenas não lidas</string>
    <string name="data_final">Data Final</string>

</resources>
