<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_margin="15dp"
         >

        <TextView
            android:id="@+id/tvRemetente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario" />

        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" 
            ><requestFocus /></EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_margin="15dp"
         >

        <TextView
            android:id="@+id/tvData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha" />

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" >

            
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_margin="15dp"
         >

        <TextView
            android:id="@+id/tvMensagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matricula" />

        <EditText
            android:id="@+id/edtMatricula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </TableRow>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_margin="15dp"
        android:text="@string/salvar"
        android:onClick="onClick" />

</TableLayout>